--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
         <artifactId>maven-assembly-plugin</artifactId>
         <version>3.2.0</version>
         <configuration>
-          <finalName>restart-test</finalName>
+          <finalName>jvm-unix-restart</finalName>
           <archive>
             <manifest>
               <mainClass>com.cloudogu.restart.App</mainClass>
